Fixed visibility of hidden elements

--- a/css/sozi.editor.view.css
+++ b/css/sozi.editor.view.css
@@ -38,6 +38,14 @@ body {
     height: 80%;
 }
 
+.top-left svg {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
+
 .top-left * {
     cursor: default;
 }
